--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,10 +28,10 @@ jobs:
         login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
-
+ 
     - name: Build the frontend image and push it to ACR
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: tamopsgithubacr.azurecr.io/aspcoresample:${{ github.sha }}
+        tags: acrcontainerexample.azurecr.io/aspcoresample:${{ github.sha }}
         file: aspnet-core-dotnet-core/Dockerfile
