--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,12 @@ jobs:
     steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+   
+    - name: azure login
+      uses: azure/login@v1
+      with:
+            creds: ${{ secrets.AZURE_LOGIN }} 
  
     - name: 'Docker Login'
       uses: azure/docker-login@v1
