--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,5 +38,5 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: acrcontainerexample.azurecr.io/aspcoresample:${{ github.sha }}
+        tags: dockerappinteg.azurecr.io/aspcoresample:${{ github.sha }}
         file: aspnet-core-dotnet-core/Dockerfile
